force-app/main/default/objects/Field__c/fields/Field_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Field_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Checkbox</label>
    <type>Checkbox</type>
</CustomField>