force-app/main/default/objects/Field__c/fields/Field_Currency__c.field-meta.xml
<CustomField>
    <fullName>Field_Currency__c</fullName>
    <label>Field Currency</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>