force-app/main/default/objects/Field__c/fields/Field_Date__c.field-meta.xml
<CustomField>
    <fullName>Field_Date__c</fullName>
    <label>Field Date</label>
    <type>Date</type>
</CustomField>