force-app/main/default/objects/Field__c/fields/Field_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Field_Date_Time__c</fullName>
    <label>Field Date/Time</label>
    <type>DateTime</type>
</CustomField>