force-app/main/default/objects/Field__c/fields/Field_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Field_Geolocation__c</fullName>
    <label>Field Geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>