force-app/main/default/objects/Field__c/fields/Field_Number__c.field-meta.xml
<CustomField>
    <fullName>Field_Number__c</fullName>
    <label>Field Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>