force-app/main/default/objects/Field__c/fields/Field_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Field_Percentage__c</fullName>
    <label>Field Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>