force-app/main/default/objects/Field__c/fields/Field_Phone__c.field-meta.xml
<CustomField>
    <fullName>Field_Phone__c</fullName>
    <label>Field Phone</label>
    <type>Phone</type>
</CustomField>