force-app/main/default/objects/Field__c/fields/Field_Text__c.field-meta.xml
<CustomField>
    <fullName>Field_Text__c</fullName>
    <label>Field Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>