force-app/main/default/objects/Field__c/fields/Field_Text_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Field_Text_Encrypted__c</fullName>
    <label>Field Text(Encrypted)</label>
    <length>5</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>