force-app/main/default/objects/Field__c/fields/Field_TextArea__c.field-meta.xml
<CustomField>
    <fullName>Field_TextArea__c</fullName>
    <label>Field TextArea</label>
    <type>TextArea</type>
</CustomField>