force-app/main/default/objects/Field__c/fields/Field_TextArea_Long__c.field-meta.xml
<CustomField>
    <fullName>Field_TextArea_Long__c</fullName>
    <label>Field TextArea(Long)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>