force-app/main/default/objects/Field__c/fields/Field_TextArea_Rich__c.field-meta.xml
<CustomField>
    <fullName>Field_TextArea_Rich__c</fullName>
    <label>Field TextArea(Rich)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>