force-app/main/default/objects/Field__c/fields/Field_Time__c.field-meta.xml
<CustomField>
    <fullName>Field_Time__c</fullName>
    <label>Field Time</label>
    <type>Time</type>
</CustomField>